Test Org - Speridian/src/objects/BA_Class_Package__c.object
<CustomObject>
    <fields>
        <fullName>ba_BenefitPackageID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Benefit Package</label>
        <referenceTo>BA_Asset__c</referenceTo>
        <relationshipLabel>Group Class Packages</relationshipLabel>
        <relationshipName>Group_Class_Packages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_ClassID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Class ID</label>
        <referenceTo>BA_Classes__c</referenceTo>
        <relationshipLabel>Group Class Packages</relationshipLabel>
        <relationshipName>Group_Class_Packages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Policy Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Class Packages</relationshipLabel>
        <relationshipName>Group_Class_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_RateEffectiveDate__c</fullName>
        <label>Rate Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_RateTerminationDate__c</fullName>
        <label>Rate Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Policy Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Group Class Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Class Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Class Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>